cabal-version:      2.4
name:               declassify
version:            0.1.0.0

author:             Sankha Narayan Guria
maintainer:         sankha93@gmail.com

executable declassify
    main-is:          Declassify.hs

    other-modules:    Anosy
                      Birthday
                      BirthdayGen
                      Interval
                      PowerSet
                      SecretDefn

    build-depends:    base ^>=4.14.0.0, lio, transformers, unordered-containers, hashable
    hs-source-dirs:   src
    default-language: Haskell2010
